--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@
 
 pluginGroup = com.github.shinichy.integrant
 pluginName = Integrant
-pluginVersion = 0.1.1
+pluginVersion = 0.1.2-imrekoszo-3
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 203
-pluginUntilBuild = 213.*
+pluginUntilBuild = 233.*
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
